// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. button 1`] = `
<TouchableHighlight
  activeOpacity={1}
  delayPressOut={100}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#006699",
      "borderRadius": 4,
      "elevation": 3,
      "height": 36,
      "justifyContent": "center",
      "minWidth": 100,
      "width": "100%",
    }
  }
  underlayColor="#0077B3"
>
  <Text
    style={
      Object {
        "color": "#FFFFFF",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 14,
        "lineHeight": 14,
        "paddingTop": 0,
      }
    }
    title="TEST BUTTON"
  >
    TEST BUTTON
  </Text>
</TouchableHighlight>
`;

exports[`2. button with font and line-height 1`] = `
<TouchableHighlight
  activeOpacity={1}
  delayPressOut={100}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#006699",
      "borderRadius": 4,
      "elevation": 3,
      "height": 36,
      "justifyContent": "center",
      "minWidth": 100,
      "width": "100%",
    }
  }
  underlayColor="#0077B3"
>
  <Text
    style={
      Object {
        "color": "#FFFFFF",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 10,
        "lineHeight": 10,
        "paddingTop": 0,
      }
    }
    title="TEST BUTTON"
  >
    TEST BUTTON
  </Text>
</TouchableHighlight>
`;
